few changes here and there

--- a/github.properties
+++ b/github.properties
@@ -1,2 +1,2 @@
-gpr.usr=66249282
-gpr.key=68149246bfe2548a861b30986fa4246d97f7449e
+gpr.usr = YashBhappa
+gpr.key = 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
