--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+gpr.usr = YashBhappa
+gpr.key = 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
